--- a/french-site/index.html
+++ b/french-site/index.html
@@ -16,9 +16,9 @@
         <p>Il constitue une référence conceptuelle publique, fondée sur un dépôt d'antériorité établi en janvier 2026.</p>
         <p>Le document de référence est accessible ci-dessous.</p>
 
-        <h3>Definition / Définition</h3>
+        <h3>Définition</h3>
         <p>L'intercognition désigne le processus et le niveau d'analyse propres à l'interaction continue entre deux systèmes cognitifs hétérogènes, au sein desquels émergent des effets cognitifs non réductibles aux propriétés, capacités ou performances de chacun des systèmes pris isolément.</p>
-        <p>L'intercognition ne se confond ni avec l'intelligence d'un système, ni avec celle de l'autre, ni avec leur simple mise en relation fonctionnelle.</p>
+        <p>L'intercognition ne se confond ni avec l'intelligence d'un système, ni avec celle d'un autre, ni avec leur simple mise en relation fonctionnelle.</p>
         <p>Elle désigne un régime spécifique d'interaction, dans lequel les dynamiques cognitives produites ne peuvent être adéquatement décrites par les seules notions de cognition individuelle, collective, distribuée ou métacognitive.</p>
 
         <h3>Statut / Antériorité</h3>
