--- a/english-site/index.html
+++ b/english-site/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INTERCOGNITION - Definition of an intercognitive field</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="container">
         <h1>INTERCOGNITION</h1>
         <h2>Definition of an intercognitive field</h2>
-        
+
         <h3>Welcome</h3>
         <p>This website presents the first formal definition of the intercognitive field.</p>
         <p>It serves as a public conceptual reference, based on a prior-art deposit established in January 2026.</p>
         <p>The reference document is available below.</p>
 
+
+        <div class="image-section">
+            <img src="image.png" alt="Intercognition" class="banner-image">
+        </div>
+
         <h3>Definition</h3>
-        <p>Intercognition refers to the process and analytical level specific to the continuous interaction between two heterogeneous cognitive systems, within which cognitive effects emerge that are not reducible to the properties, capacities, or performances of either system considered in isolation.</p>
-        <p>Intercognition is distinct from the intelligence of one system or the other, and from their mere functional coupling.</p>
-        <p>It defines a specific regime of interaction in which the resulting cognitive dynamics cannot be adequately described by individual, collective, distributed, or metacognitive frameworks alone.</p>
+        <p>Intercognition refers to the process and analytical level specific to the continuous interaction between two
+            heterogeneous cognitive systems, within which cognitive effects emerge that are not reducible to the
+            properties, capacities, or performances of either system considered in isolation.</p>
+        <p>Intercognition is distinct from the intelligence of one system or the other, and from their mere functional
+            coupling.</p>
+        <p>It defines a specific regime of interaction in which the resulting cognitive dynamics cannot be adequately
+            described by individual, collective, distributed, or metacognitive frameworks alone.</p>
 
         <h3>Status / Prior Art</h3>
         <ul>
@@ -36,16 +47,21 @@
                 📄 PDF — Intercognition: Definition and Scope (Public Reference Version)
             </a>
         </p>
-        <p>This public version strictly mirrors the content of the original Soleau deposit dated January 16, 2026. Prior art is established through the Soleau deposit and blockchain timestamping. This document is provided for reference, citation, and scholarly use. Cryptographic proof is available upon request.</p>
+        <p>This public version strictly mirrors the content of the original Soleau deposit dated January 16, 2026. Prior
+            art is established through the Soleau deposit and blockchain timestamping. This document is provided for
+            reference, citation, and scholarly use. Cryptographic proof is available upon request.</p>
 
         <h3>Licence</h3>
         <p>This work is licensed under the<br>
-        <strong>Creative Commons Attribution 4.0 International (CC BY 4.0) licence.</strong></p>
+            <strong>Creative Commons Attribution 4.0 International (CC BY 4.0) licence.</strong>
+        </p>
         <p>Any reuse, reformulation, or extension must explicitly cite this reference.</p>
 
         <h3>Contact</h3>
         <p>contact [at] intercognition.org</p>
-        <p class="alt-version">French version available at: <a href="https://intercognition.fr">https://intercognition.fr</a></p>
+        <p class="alt-version">French version available at: <a
+                href="https://intercognition.fr">https://intercognition.fr</a></p>
     </div>
 </body>
+
 </html>
