--- a/french-site/index.html
+++ b/french-site/index.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INTERCOGNITION - Définition d'un champ intercognitif</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="container">
         <h1>INTERCOGNITION</h1>
         <h2>Définition d'un champ intercognitif</h2>
-        
+
         <h3>Accueil</h3>
         <p>Ce site présente la première définition formelle du champ de l'intercognition.</p>
-        <p>Il constitue une référence conceptuelle publique, fondée sur un dépôt d'antériorité établi en janvier 2026.</p>
+        <p>Il constitue une référence conceptuelle publique, fondée sur un dépôt d'antériorité établi en janvier 2026.
+        </p>
         <p>Le document de référence est accessible ci-dessous.</p>
 
+        <div class="image-section">
+            <img src="image.png" alt="Intercognition" class="banner-image">
+        </div>
+
         <h3>Définition</h3>
-        <p>L'intercognition désigne le processus et le niveau d'analyse propres à l'interaction continue entre deux systèmes cognitifs hétérogènes, au sein desquels émergent des effets cognitifs non réductibles aux propriétés, capacités ou performances de chacun des systèmes pris isolément.</p>
-        <p>L'intercognition ne se confond ni avec l'intelligence d'un système, ni avec celle d'un autre, ni avec leur simple mise en relation fonctionnelle.</p>
-        <p>Elle désigne un régime spécifique d'interaction, dans lequel les dynamiques cognitives produites ne peuvent être adéquatement décrites par les seules notions de cognition individuelle, collective, distribuée ou métacognitive.</p>
+        <p>L'intercognition désigne le processus et le niveau d'analyse propres à l'interaction continue entre deux
+            systèmes cognitifs hétérogènes, au sein desquels émergent des effets cognitifs non réductibles aux
+            propriétés, capacités ou performances de chacun des systèmes pris isolément.</p>
+        <p>L'intercognition ne se confond ni avec l'intelligence d'un système, ni avec celle d'un autre, ni avec leur
+            simple mise en relation fonctionnelle.</p>
+        <p>Elle désigne un régime spécifique d'interaction, dans lequel les dynamiques cognitives produites ne peuvent
+            être adéquatement décrites par les seules notions de cognition individuelle, collective, distribuée ou
+            métacognitive.</p>
 
         <h3>Statut / Antériorité</h3>
         <ul>
@@ -36,16 +48,22 @@
                 📄 PDF — Intercognition : Définition et portée (Version de référence publique)
             </a>
         </p>
-        <p>Cette version publique reflète strictement le contenu du dépôt Soleau original daté du 16 janvier 2026. L'antériorité est établie par le dépôt Soleau et l'horodatage sur blockchain. Ce document est fourni à des fins de référence, de citation et d'usage académique. Une preuve cryptographique est disponible sur demande.</p>
+        <p>Cette version publique reflète strictement le contenu du dépôt Soleau original daté du 16 janvier 2026.
+            L'antériorité est établie par le dépôt Soleau et l'horodatage sur blockchain. Ce document est fourni à des
+            fins de référence, de citation et d'usage académique. Une preuve cryptographique est disponible sur demande.
+        </p>
 
         <h3>Licence</h3>
         <p>Cette œuvre est diffusée sous licence<br>
-        <strong>Creative Commons Attribution 4.0 International (CC BY 4.0).</strong></p>
+            <strong>Creative Commons Attribution 4.0 International (CC BY 4.0).</strong>
+        </p>
         <p>Toute réutilisation, reformulation ou extension devra citer explicitement cette référence.</p>
 
         <h3>Contact</h3>
         <p>contact [at] intercognition.org</p>
-        <p class="alt-version">Version anglaise disponible sur : <a href="https://intercognition.org">https://intercognition.org</a></p>
+        <p class="alt-version">Version anglaise disponible sur : <a
+                href="https://intercognition.org">https://intercognition.org</a></p>
     </div>
 </body>
+
 </html>
