--- a/english-site/index.html
+++ b/english-site/index.html
@@ -10,8 +10,12 @@
 
 <body>
     <div class="container">
-        <h1>INTERCOGNITION</h1>
-        <h2>Definition of an intercognitive field</h2>
+        <!-- <h1>INTERCOGNITION</h1>
+        <h2>Definition of an intercognitive field</h2> -->
+
+        <div class="image-section">
+            <img src="image.png" alt="Intercognition" class="banner-image">
+        </div>
 
         <h3>Welcome</h3>
         <p>This website presents the first formal definition of the intercognitive field.</p>
@@ -19,9 +23,7 @@
         <p>The reference document is available below.</p>
 
 
-        <div class="image-section">
-            <img src="image.png" alt="Intercognition" class="banner-image">
-        </div>
+
 
         <h3>Definition</h3>
         <p>Intercognition refers to the process and analytical level specific to the continuous interaction between two
@@ -44,7 +46,7 @@
         <p>A public reference document is available here:</p>
         <p class="pdf-link">
             <a href="INTERCOGNITION_SITE__EN_.pdf" target="_blank" rel="noopener noreferrer">
-                📄 PDF — Intercognition: Definition and Scope (Public Reference Version)
+                📄 PDF — Intercognition: Definition and Scope
             </a>
         </p>
         <p>This public version strictly mirrors the content of the original Soleau deposit dated January 16, 2026. Prior
