--- a/french-site/index.html
+++ b/french-site/index.html
@@ -10,8 +10,12 @@
 
 <body>
     <div class="container">
-        <h1>INTERCOGNITION</h1>
-        <h2>Définition d'un champ intercognitif</h2>
+        <!-- <h1>INTERCOGNITION</h1>
+        <h2>Définition d'un champ intercognitif</h2> -->
+
+        <div class="image-section">
+            <img src="image.png" alt="Intercognition" class="banner-image">
+        </div>
 
         <h3>Accueil</h3>
         <p>Ce site présente la première définition formelle du champ de l'intercognition.</p>
@@ -19,9 +23,7 @@
         </p>
         <p>Le document de référence est accessible ci-dessous.</p>
 
-        <div class="image-section">
-            <img src="image.png" alt="Intercognition" class="banner-image">
-        </div>
+        
 
         <h3>Définition</h3>
         <p>L'intercognition désigne le processus et le niveau d'analyse propres à l'interaction continue entre deux
@@ -45,7 +47,7 @@
         <p>Un document de référence public est disponible ici :</p>
         <p class="pdf-link">
             <a href="INTERCOGNITION_SITE__FR_.pdf" target="_blank" rel="noopener noreferrer">
-                📄 PDF — Intercognition : Définition et portée (Version de référence publique)
+                📄 PDF — Intercognition : Définition et portée
             </a>
         </p>
         <p>Cette version publique reflète strictement le contenu du dépôt Soleau original daté du 16 janvier 2026.
