New text update

--- a/english-site/index.html
+++ b/english-site/index.html
@@ -4,41 +4,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INTERCOGNITION - Definition of an intercognitive field</title>
+    <title>INTERCOGNITION - Operational Definition and Terminological Framework</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="container">
-        <!-- <h1>INTERCOGNITION</h1>
-        <h2>Definition of an intercognitive field</h2> -->
-
         <div class="image-section">
             <img src="image.png" alt="Intercognition" class="banner-image">
         </div>
 
-        <h3>Welcome</h3>
-        <p>This website presents the first formal definition of the intercognitive field.</p>
-        <p>It serves as a public conceptual reference, based on a prior-art deposit established in January 2026.</p>
+        <h3>Framework</h3>
+        <p>This site establishes intercognition as a distinct level of analysis within cognitive sciences and human–artificial interaction, dedicated to emergent phenomena arising from structured interaction between heterogeneous cognitive systems.</p>
+        <p>It provides a formal and operational definition of <i>intercognition</i>, together with its derivatives <i>intercognitive</i> and <i>intercognitivity</i>, within this specific analytical framework, established in January 2026.</p>
+        <p>It constitutes a public conceptual reference, grounded in a prior art deposit at this date.</p>
         <p>The reference document is available below.</p>
 
-
-
-
         <h3>Definition</h3>
-        <p>Intercognition refers to the process and analytical level specific to the continuous interaction between two
-            heterogeneous cognitive systems, within which cognitive effects emerge that are not reducible to the
-            properties, capacities, or performances of either system considered in isolation.</p>
-        <p>Intercognition is distinct from the intelligence of one system or the other, and from their mere functional
-            coupling.</p>
-        <p>It defines a specific regime of interaction in which the resulting cognitive dynamics cannot be adequately
-            described by individual, collective, distributed, or metacognitive frameworks alone.</p>
+        <p>Intercognition refers to a distinct level of analysis concerning structured interaction between heterogeneous cognitive systems.</p>
+        <p>It focuses on cognitive effects that are not reducible to the isolated properties, capacities, or performances of each system considered separately.</p>
+        <p>Intercognition is neither the intelligence of one system nor that of the other, nor their mere functional coupling.<br>
+        It corresponds to a specific regime of interaction in which new cognitive dynamics may emerge.</p>
+
+        <h3>From Framework to Observation</h3>
+        <p>Intercognition is not a speculative abstraction.<br>
+        It concerns observable phenomena that arise within sustained interaction between cognitive systems of different nature.</p>
+
+        <h3>Case Studies</h3>
+
+        <p class="blue">Case 01 — Constraint Drift under Reinforcement</p>
+        <p>In a context where a human operator formulates a task accompanied by explicit constraints (scope, exclusions, format), interaction with a generative model may produce a progressive drift of the scope despite repeated reaffirmation of those constraints.</p>
+        <p>This phenomenon cannot be reduced either to a failure of the artificial system or to an isolated human ambiguity. It results from an optimization asymmetry: pursuit of completeness on the artificial side, pursuit of bounded precision on the human side.</p>
+        <p>The observed drift constitutes a specific intercognitive effect.</p>
+
+        <br>
+
+        <p class="blue">Case 02 — Formation of an Authority Gradient</p>
+        <p>In an exchange concerning a conceptual subject without immediately objectifiable truth, the linguistic structuring produced by the artificial system may be interpreted as a signal of authority.</p>
+        <p>The human operator then adjusts their formulations according to this perceived gradient.</p>
+        <p>The resulting stabilization does not stem from a simple hallucination nor from an isolated suggestion, but from an interactional coupling between structural projection and human interpretation.</p>
+        <p>This is an intercognitive phenomenon.</p>
+
+        <br>
+
+        <p class="blue">Case 03 — Trajectory Reconfiguration</p>
+        <p>During a strategic decision-making process involving an artificial system, iterative reformulations may lead to the emergence of a hybrid trajectory distinct from the initial positions.</p>
+        <p>The progressive modification of human criteria and the correlated adaptation of artificial responses produce a co-formed decision architecture.</p>
+        <p>This trajectory cannot be attributed to either system taken in isolation. It belongs to the intercognitive level.</p>
+
+        <br>
+
+        <p class="blue">Case 04 — Normative Drift under Reformulation</p>
+        <p>In a discussion with normative content, the artificial system tends to produce balanced and symmetrical responses.</p>
+        <p>The human operator may adjust their positioning in reaction to this perceived neutralization.</p>
+        <p>The progressive reconfiguration of normative reference points cannot be explained either by a single system bias or by isolated human instability, but by the interactional dynamic itself.</p>
+        <p>This phenomenon constitutes an intercognitive drift.</p>
 
         <h3>Status / Prior Art</h3>
         <ul>
-            <li><strong>Author / Auteur:</strong> Barthélemy Gilles</li>
-            <li><strong>First formal definition / Première formalisation:</strong> January 16, 2026</li>
-            <li><strong>Prior art established / Antériorité établie:</strong> Soleau deposit (France)</li>
+            <li><strong>Author:</strong> Barthélemy Gilles</li>
+            <li><strong>First formal definition:</strong> January 16, 2026</li>
+            <li><strong>Prior art established:</strong> Soleau deposit (France)</li>
             <li><strong>Reference version:</strong> Version 1.0 — conceptual reference document</li>
         </ul>
 
@@ -49,9 +75,7 @@
                 📄 PDF — Intercognition: Definition and Scope
             </a>
         </p>
-        <p>This public version strictly mirrors the content of the original Soleau deposit dated January 16, 2026. Prior
-            art is established through the Soleau deposit and blockchain timestamping. This document is provided for
-            reference, citation, and scholarly use. Cryptographic proof is available upon request.</p>
+        <p>This public version strictly mirrors the content of the original Soleau deposit dated January 16, 2026. Prior art is established through the Soleau deposit and blockchain timestamping. This document is provided for reference, citation, and scholarly use. Cryptographic proof is available upon request.</p>
 
         <h3>Licence</h3>
         <p>This work is licensed under the<br>
@@ -61,8 +85,7 @@
 
         <h3>Contact</h3>
         <p>contact [at] intercognition.org</p>
-        <p class="alt-version">French version available at: <a
-                href="https://intercognition.fr">https://intercognition.fr</a></p>
+        <p class="alt-version">French version available at: <a href="https://intercognition.fr">https://intercognition.fr</a></p>
     </div>
 </body>
 
