--- a/french-site/index.html
+++ b/french-site/index.html
@@ -4,36 +4,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INTERCOGNITION - Définition d'un champ intercognitif</title>
+    <title>INTERCOGNITION - Définition opératoire et cadre terminologique</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="container">
-        <!-- <h1>INTERCOGNITION</h1>
-        <h2>Définition d'un champ intercognitif</h2> -->
-
         <div class="image-section">
             <img src="image.png" alt="Intercognition" class="banner-image">
         </div>
 
-        <h3>Accueil</h3>
-        <p>Ce site présente la première définition formelle du champ de l'intercognition.</p>
-        <p>Il constitue une référence conceptuelle publique, fondée sur un dépôt d'antériorité établi en janvier 2026.
-        </p>
-        <p>Le document de référence est accessible ci-dessous.</p>
-
-        
+        <h3>Cadre</h3>
+        <p>Ce site expose le champ de l'intercognition comme niveau d'analyse distinct des formes classiques de la
+            cognition, consacré aux phénomènes émergents, aux dérives et aux reconfigurations propres à l'interaction
+            entre systèmes cognitifs hétérogènes.</p>
+        <br>
+        <p>Il en crée et définit le néologisme en français — ainsi que ses dérivés — et en établit la première
+            définition formelle et opératoire, fixée en janvier 2026.</p>
+        <p>Il constitue une référence conceptuelle publique, fondée sur un dépôt d'antériorité à cette date.</p>
 
         <h3>Définition</h3>
-        <p>L'intercognition désigne le processus et le niveau d'analyse propres à l'interaction continue entre deux
-            systèmes cognitifs hétérogènes, au sein desquels émergent des effets cognitifs non réductibles aux
-            propriétés, capacités ou performances de chacun des systèmes pris isolément.</p>
+        <p>Intercognition désigne le niveau d'analyse propre à l'interaction continue entre systèmes cognitifs
+            hétérogènes.
+            Elle porte sur les effets cognitifs non réductibles aux propriétés de chacun des systèmes pris isolément.
+        </p>
         <p>L'intercognition ne se confond ni avec l'intelligence d'un système, ni avec celle d'un autre, ni avec leur
             simple mise en relation fonctionnelle.</p>
         <p>Elle désigne un régime spécifique d'interaction, dans lequel les dynamiques cognitives produites ne peuvent
             être adéquatement décrites par les seules notions de cognition individuelle, collective, distribuée ou
             métacognitive.</p>
+
+        <h3>Du cadre à l'observation</h3>
+        <p>Le cadre conceptuel exposé ci-dessus définit un niveau d'analyse distinct, centré sur les effets produits par
+            l'interaction entre systèmes cognitifs hétérogènes.</p>
+        <p>Les sections suivantes présentent des cas d'observation structurés illustrant la manifestation concrète de
+            dynamiques intercognitives.</p>
+        <p>Ces analyses ne développent pas la théorie. Elles en démontrent l'opérativité.</p>
+
+        <h3>Analyses intercognitives</h3>
+        <h4>Cas d'observation structurés</h4>
+
+        <p class="blue">Cas 01 — Dérive de contrainte sous renforcement</p>
+        <p>Dans un contexte où un opérateur humain formule une tâche assortie de contraintes explicites (périmètre,
+            exclusions, format), l'interaction avec un modèle génératif peut produire une dérive progressive du
+            périmètre malgré la réaffirmation répétée des contraintes.</p>
+        <p>Ce phénomène ne se réduit ni à une défaillance du système artificiel, ni à une ambiguïté humaine isolée. Il
+            résulte d'une asymétrie d'optimisation : recherche de complétude côté artificiel, recherche de précision
+            bornée côté humain.</p>
+        <p>La dérive observée constitue un effet intercognitif propre.</p>
+
+        <br>
+        <p class="blue">Cas 02 — Formation d'un gradient d'autorité</p>
+        <p>Dans un échange portant sur un sujet conceptuel sans vérité objectivable immédiate, la structuration
+            linguistique produite par le système artificiel peut être interprétée comme un signal d'autorité.</p>
+        <p>L'opérateur humain ajuste alors ses formulations en fonction de ce gradient perçu.</p>
+        <p>La stabilisation qui en résulte ne relève ni d'une simple hallucination, ni d'une suggestion isolée, mais
+            d'un couplage interactionnel entre projection structurelle et interprétation humaine.</p>
+        <p>Il s'agit d'un phénomène intercognitif.</p>
+
+        <br>
+        <p class="blue">Cas 03 — Reconfiguration de trajectoire</p>
+        <p>Au cours d'un processus décisionnel stratégique impliquant un système artificiel, l'itération des
+            reformulations peut conduire à l'émergence d'une trajectoire hybride distincte des positions initiales.</p>
+        <p>La modification progressive des critères humains et l'adaptation corrélative des réponses artificielles
+            produisent une architecture décisionnelle co-formée.</p>
+        <p>Cette trajectoire ne peut être attribuée à un seul des systèmes pris isolément. Elle relève du niveau
+            intercognitif.</p>
+
+        <br>
+        <p class="blue">Cas 04 — Dérive normative sous reformulation</p>
+        <p>Dans une discussion à contenu normatif, le système artificiel tend à produire des réponses équilibrées et
+            symétriques.</p>
+        <p>L'opérateur humain peut ajuster son positionnement en réaction à cette neutralisation perçue.</p>
+        <p>La reconfiguration progressive des repères normatifs ne s'explique ni par un biais unique du système, ni par
+            une instabilité humaine isolée, mais par la dynamique interactionnelle elle-même.</p>
+        <p>Ce phénomène constitue une dérive intercognitive.</p>
 
         <h3>Statut / Antériorité</h3>
         <ul>
