Contact Mail Added

--- a/english-site/index.html
+++ b/english-site/index.html
@@ -84,7 +84,7 @@
         <p>Any reuse, reformulation, or extension must explicitly cite this reference.</p>
 
         <h3>Contact</h3>
-        <p>contact [at] intercognition.org</p>
+        <p>contact@intercognition.org</p>
         <p class="alt-version">French version available at: <a href="https://intercognition.fr">https://intercognition.fr</a></p>
     </div>
 </body>
