--- a/french-site/index.html
+++ b/french-site/index.html
@@ -107,7 +107,7 @@
         <p>Toute réutilisation, reformulation ou extension devra citer explicitement cette référence.</p>
 
         <h3>Contact</h3>
-        <p>contact [at] intercognition.org</p>
+        <p>contact@intercognition.org</p>
         <p class="alt-version">Version anglaise disponible sur : <a
                 href="https://intercognition.org">https://intercognition.org</a></p>
     </div>
